infra/worker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: stephenwyf1/worker
          resources:
            limits:
              memory: 5096Mi
              cpu: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: worker-srv
spec:
  selector:
    app: worker
  ports:
    - name: worker
      protocol: TCP
      port: 3000
      targetPort: 3000
