infra/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: containers.prod
      http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-srv
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /postgresql
            pathType: Prefix
            backend:
              service:
                name: postgresql
                port:
                  number: 5432
